feat: add endpoint to delete user based on id
